<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editSiteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Site name"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnSaveSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save" />

    <Button
        android:id="@+id/btnDeleteSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:backgroundTint="#D32F2F"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        android:layout_marginTop="8dp" />
</LinearLayout>
